--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,8 +4,8 @@ body{
     font-family: Ubuntu, Sans-serif;
     color: #f2f5f7;
     width: 100%;
-    height: 100%;
     margin: 0;
+    padding: 0;
 }
 
 nav{
@@ -16,15 +16,14 @@ nav{
 }
 
 .logo{
-    height: 280px;
-    width: 280px;
+    height: 10rem;
+    width: 10rem;
     border-radius: 100%;
     margin-top: 20px;
     border-bottom: #f2f5f7 5px solid;
 }
 
 ul{
-    display: flex;
     padding: 0px;
     margin: 0px;
 }
@@ -66,7 +65,7 @@ li{
 a{
     text-decoration: none;
     color: #f2f5f7;
-    font-size: 22px;
+    font-size: 14px;
     padding: 10px;
     transition: linear 0.1s;
     margin: 10px;
@@ -75,8 +74,6 @@ a{
 main{
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-    
 }
 
 main .menu{
@@ -97,8 +94,8 @@ main .menu-p{
 }
 
 .icon{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     display: flex;
 }
 
@@ -123,8 +120,8 @@ a:hover{
 }
 
 .linkedn{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
 }
 
@@ -149,8 +146,8 @@ main .menu-b{
 }
 
 .behance{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
    
 }
@@ -166,15 +163,15 @@ main .menu-g{
 }
 
 .git{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
 
 }
 
 main .menu-w{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border: 1px solid #f2f5f7;
     border-radius: 10px;
@@ -183,8 +180,8 @@ main .menu-w{
 }
 
 .wpp{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
     
 }
@@ -208,9 +205,3 @@ footer{
     bottom: 0px;
 
 }
-
-
-
-
-
-
