--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,43 +1,18 @@
-/* Estilos gerais */
-/* Estilos para telas com largura mínima de 392px e altura mínima de 852px */
-@media screen and (max-width: 392px) and (min-height: 852px) {
-    body {
-        background-color: #f0f0f0;
+@media (max-width: 400px) {
+    
+    .logo{
+        width: 100px;
+        height: 100px;
     }
 
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0px 0px;
-        background-color: #333;
-        color: #fff;
-    }
-
-    nav ul {
-        display: flex;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-    }
-
-    nav ul li {
-        margin: 0 0px;
-    }
-
-    nav ul li a {
-        text-decoration: none;
-        color: #fff;
-    }
-
-    main {
+    li .digitando{
+        font-size: 16px;
+        margin: 10px;
         padding: 0px;
     }
 
-    footer {
-        text-align: center;
+    li h1{
+        margin: 0px;
         padding: 0px;
-        background-color: #333;
-        color: #fff;
     }
 }
