--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,17 +16,16 @@ nav{
 }
 
 .logo{
-    height: 280px;
-    width: 280px;
+    height: 180px;
+    width: 180px;
     border-radius: 100%;
-    margin-top: 20px;
     border-bottom: #f2f5f7 5px solid;
 }
 
 ul{
     display: flex;
-    padding: 0;
-
+    padding: 0px;
+    margin: 0px;
 }
 
 li{
@@ -66,7 +65,7 @@ li{
 a{
     text-decoration: none;
     color: #f2f5f7;
-    font-size: 22px;
+    font-size: 20px;
     padding: 10px;
     transition: linear 0.1s;
     margin: 10px;
@@ -97,13 +96,12 @@ main .menu-p{
 }
 
 .icon{
-    width: 50px;
-    height: 50px;
-    display: flex;
+    width: 35px;
+    height: 35px;
 }
 
 a:hover{
-    color: rgb(192, 192, 192);
+    color: rgb(134, 134, 134);
 }
 
 .menu-p:hover{
@@ -123,8 +121,8 @@ a:hover{
 }
 
 .linkedn{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
 }
 
@@ -149,8 +147,8 @@ main .menu-b{
 }
 
 .behance{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
    
 }
@@ -166,15 +164,15 @@ main .menu-g{
 }
 
 .git{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
 
 }
 
 main .menu-w{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border: 1px solid #f2f5f7;
     border-radius: 10px;
@@ -183,8 +181,8 @@ main .menu-w{
 }
 
 .wpp{
-    width: 50px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     filter: invert();
     
 }
