--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -16,3 +16,22 @@
         padding: 0px;
     }
 }
+
+ @media (max-width: 1080px) {
+    
+    .logo{
+        width: 130px;
+        height: 130px;
+    }
+
+    li .digitando{
+        font-size: 20px;
+        margin: 10px;
+        padding: 0px;
+    }
+
+    li h1{
+        margin: 0px;
+        padding: 0px;
+    }
+}
