--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -25,7 +25,7 @@
     }
 
     li .digitando{
-        font-size: 20px;
+        font-size: 16px;
         margin: 10px;
         padding: 0px;
     }
@@ -33,5 +33,10 @@
     li h1{
         margin: 0px;
         padding: 0px;
+    }
+
+    a{
+        font-size: 16px;
+        padding: 5px;
     }
 }
